# Python-for-Data-Science

./: README.md  READMEG_HELP.TXT  README_G.md  tester.py
module-00/: README.md  README00_HELP.txt
module-00/ex00/: Hello.py
module-00/ex01/: format_ft_time.py  validate_args.py
module-00/ex02/: find_ft_type.py  tester.py  validate_args.py
module-00/ex03/: NULL_not_found.py  tester.py
module-00/ex04/: tester.py  whatis.py
module-00/ex05/: building.py  validate_args.py
module-00/ex06/: doc_filter.py  filterstring.py  ft_filter.py  tester.py  validate_args.py
module-00/ex07/: sos.py
module-00/ex08/: Loading.py  tester.py
module-00/ex09/: LICENSE  README.md  pyproject.toml
module-00/ex09/ft_package/: __init__.py  core.py
module-01/: README.md  README01_HELP.txt  README_HELP.txt  array_test.py
module-01/ex00/: give_bmi.py  tester.py
module-01/ex01/: array2D.py  tester.py
module-01/ex02/: load_image.py  tester.py  validate_args.py
module-01/ex03/: load_image.py  tester.py  validate_args.py  zoom.py
module-01/ex04/: load_image.py  rotate.py  tester.py  zoom.py
module-01/ex05/: load_image.py  pimp_image.py  tester.py
module-01/utils/: validate_args.py
module-02/: README.md
module-02/csv_files/: parser_error.csv
module-02/ex00/: load_csv.py  load_csv3.py  pandas_exceptions.py  tester.py
module-02/ex01/: aff_life.py
module-02/ex02/: aff_pop.py  load_csv.py
module-02/ex03/: projection_life.py  validate_args.py
module-03/: README.md
module-03/ex00/: S1E9.py  tester.py
module-03/ex01/: S1E7.py  S1E9.py  (+1 more)
module-04/: README.md
(+24 files in other folders)
